add style and select

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" href="<%= BASE_URL %>Star.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="style.css" rel="stylesheet" type="text/css">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <style>
-      body {
-        background-color: rgb(255, 252, 247);
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      }
-    </style>
   </head>
   <body>
     <noscript>
